Weapon properties spacing fix

--- a/less/original/items.less
+++ b/less/original/items.less
@@ -372,7 +372,7 @@
       padding: 5px 5px 0 0;
       border-right: @borderGroove;
       overflow: hidden auto;
-      height: 100%;
+      // height: 100%;
 
       .form-group {
         margin: 0;
